5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1638_2729.log
== TEST (2019-04-13 22:21:00) 
-- CODE:
x=int(input("num1: "))
y=int(input("num2: "))
 b=x*y

if(b%2==0):
	print(x+y)
else:
	print(y-x)
-- ERROR:
File "XXXX", line 3
    b=x*y
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:21:09) 
-- CODE:
x=int(input("num1: "))
y=int(input("num2: "))
b=x*y

if(b%2==0):
	print(x+y)
else:
	print(y-x)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:21:26) 
-- CODE:
x=int(input("num1: "))
y=int(input("num2: "))
b=x*y

if(b%2==0):
	print(x+y)
else:
	print(y-x)
-- EXECUTION TIME:
0.164373
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
